--- a/Modules/2_preprocessing/templates/gpt_template_preprocessing_lee_KML_UTM.xml
+++ b/Modules/2_preprocessing/templates/gpt_template_preprocessing_lee_KML_UTM.xml
@@ -68,7 +68,7 @@
     </sources>
     <parameters class="com.bc.ceres.binding.dom.XppDomElement">
       <sourceBands/>
-      <demName>SRTM 3Sec</demName>
+      <demName>SRTM 1Sec HGT</demName>
       <externalDEMFile/>
       <externalDEMNoDataValue>0.0</externalDEMNoDataValue>
       <externalDEMApplyEGM>true</externalDEMApplyEGM>
